cmake_minimum_required(VERSION 3.27)
project(DataStructure01)

set(CMAKE_CXX_STANDARD 17)

add_executable(DataStructure01 Array.cpp
        IndirectRecursion.cpp
        NestedRecursion.cpp)
add_executable(DataStructure02 Struct.cpp)
add_executable(DataStructure03 Pointer.cpp)
add_executable(DataStructure04 ParamPassingInFunction.cpp)
add_executable(DataStructure05 ArrayAsParameter.cpp)
add_executable(DataStructure06 TailHead.cpp)
add_executable(DataStructure07 TreeRecursion.cpp)
add_executable(DataStructure08 IndirectRecursion.cpp)
add_executable(DataStructure09 NestedRecursion.cpp)




