cmake_minimum_required(VERSION 3.27)
project(DataStructure01)

set(CMAKE_CXX_STANDARD 17)

add_executable(DataStructure01 Array.cpp)
add_executable(Struct Struct.cpp)
add_executable(Pointer Pointer.cpp)
add_executable(ParamPassingInFunction ParamPassingInFunction.cpp)
add_executable(ArrayAsParameter ArrayAsParameter.cpp)
add_executable(TailHead TailHead.cpp)
add_executable(TreeRecursion TreeRecursion.cpp)
add_executable(IndirectRecursion IndirectRecursion.cpp)
add_executable(NestedRecursion NestedRecursion.cpp)
add_executable(nCr nCr.cpp)
add_executable(Array2D Array2D.cpp)
add_executable(ifTwoStringAreAnagram ifTwoStringAreAnagram.cpp)
add_executable(Matrices01 Matrices/DiagonalMatrix.cpp)
add_executable(Matrices02 Matrices/LowerTriangularMatrix.cpp)
add_executable(string string.cpp)
add_executable(ReversingArray ReversingArray.cpp)
add_executable(ArrayADTC ArrayADTC.cpp)
add_executable(RecursionBinarySearch RecursionBinarySearch.cpp)
add_executable(BinarySearch BinarySearch.cpp)
add_executable(ArrayFunctions ArrayFunctions.cpp)






